LU-17269 obdclass: fix locking for class_register/deregister

Prevent registration and deregistration from racing with
each other. Otherwise, we could see a crash.

Test-Parameters: testlist=conf-sanity env=ONLY=41c,ONLY_REPEAT=30
Signed-off-by: Timothy Day <timday@amazon.com>
Change-Id: I4d512dcc8778c5116c1d6037ed2b7f486a7bc0dc
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/54747
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>